--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "typescript": "^4.0.2"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "@types/uniqid": "^5.2.0",
+        "express": "^4.17.1",
+        "uniqid": "^5.2.0"
     }
 }
