--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "devDependencies": {
         "@types/express": "^4.17.8",
         "@types/node": "^14.6.4",
+        "@types/request-ip": "0.0.35",
+        "@types/uniqid": "^5.2.0",
         "typescript": "^4.0.2"
     },
     "dependencies": {
-        "@types/uniqid": "^5.2.0",
         "express": "^4.17.1",
+        "request-ip": "^2.1.3",
         "uniqid": "^5.2.0"
     }
 }
