--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "Peer-to-Peer manager that connects the players of the game AdmiralWW2 with each other",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node dist/index.js",
-        "build": "tsc"
+        "test": "mocha -r ts-node/register test/**/*.ts",
+        "build": "tsc",
+        "start": "node dist/index.js"
     },
     "repository": {
         "type": "git",
@@ -19,9 +19,17 @@
     },
     "homepage": "https://github.com/CaptainPMM/AdmiralWW2-P2PManager#readme",
     "devDependencies": {
+        "@types/chai": "^4.2.12",
+        "@types/chai-http": "^4.2.0",
+        "@types/expect": "^24.3.0",
         "@types/express": "^4.17.8",
+        "@types/mocha": "^8.0.3",
         "@types/node": "^14.6.4",
         "@types/uniqid": "^5.2.0",
+        "chai": "^4.2.0",
+        "chai-http": "^4.3.0",
+        "mocha": "^8.1.3",
+        "ts-mocha": "^7.0.0",
         "typescript": "^4.0.2"
     },
     "dependencies": {
